--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Genes Theme
+Theme Name: Genesis Theme
 Theme URI: 
 Author: MyChurchWebDesigner.com
 Author URI: http://MyChurchWebDesigner.com
