--- a/css/main.css
+++ b/css/main.css
@@ -3697,7 +3697,7 @@ Footer
 ================================== */
 
 .footer-section {
-	background: #272727;
+	background: #243444;
 	color: #fff;
 	font-size: 14px;
 	font-weight: 400;
@@ -3807,7 +3807,7 @@ Footer
 .copyright {
 	font-size: 14px;
 	padding: 10px 0;
-	background: #1f1f1f;
+	background: #121A22;
 	color: #FFFFFF;
 }
 
