--- a/css/main.css
+++ b/css/main.css
@@ -1099,7 +1099,7 @@ nav.affix {
 	font-weight:700;
 	border:none;
 	white-space: nowrap;
-	background-color: #3A3A62;
+	background-color: #243444;
 }
 
 .navbar-nav .dropdown-menu li > a:hover {
